# dmxpp

./: .gitmodules  CMakeLists.txt  README.md  STRUCT_REFERENCE.h
.github/workflows/: build.yml
include/dmxpp/: Format.h  Value.h  dmxpp.h
src/: Value.cpp  dmxpp.cpp
test/: Config.h.in  Reader.cpp
